{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 69,
  "lineage": "7b6ab834-76a5-0844-318f-aa7fe43361d1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01595368-u-vm-nic-1",
            "internal_domain_name_suffix": "wdtumu1kip3epdadub4bc4yndh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01595368-u-vm-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-u-vm-pip-2",
                "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01595368-u-vm-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01595368-u-vm-nic-2",
            "internal_domain_name_suffix": "wdtumu1kip3epdadub4bc4yndh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01595368-u-vm-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-u-vm-pip-1",
                "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01595368-u-vm-nic-2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "winnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01595368-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01595368-w-vm1-nic",
            "internal_domain_name_suffix": "wdtumu1kip3epdadub4bc4yndh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01595368-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-w-vm1-pip",
                "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01595368-w-vm1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.winpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "n01595368-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01595368-w-vm2-nic",
            "internal_domain_name_suffix": "wdtumu1kip3epdadub4bc4yndh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01595368-w-vm2-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-w-vm2-pip",
                "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01595368-w-vm2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.winpip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01595368-u-vm-n01595368-1",
            "fqdn": "n01595368-u-vm-n01595368-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-u-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01595368-u-vm-pip-1",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01595368-u-vm-n01595368-2",
            "fqdn": "n01595368-u-vm-n01595368-2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-u-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01595368-u-vm-pip-2",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "winpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01595368-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01595368-w-vm1-n01595368",
            "fqdn": "n01595368-w-vm1-n01595368.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01595368-w-vm1-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "n01595368-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01595368-w-vm2-n01595368",
            "fqdn": "n01595368-w-vm2-n01595368.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01595368-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01595368-w-vm2-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01595368@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Classb",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5346e7b0-436a-47fa-8c03-a07c117b0d1f",
            "id": "/subscriptions/c207b113-8d0f-4fef-a892-47b962032477/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}